[package]
name = "libra-forensic-db"
authors = ["libra contributors"]
edition = "2021"
homepage = "https://openlibra.io/"
license = "NOASSERTION"
publish = false
repository = "https://github.com/0LNetworkCommunity/forensic-db"
rust-version = "1.78.0"
version = "0.0.1"

[dependencies]
anyhow = "^1.0"
chrono = "^0.4"
clap = "^2.3"
diem-temppath = { git = "https://github.com/0LNetworkCommunity/diem.git", branch = "unpin-futures-channel" }
diem-types = { git = "https://github.com/0LNetworkCommunity/diem.git", branch = "unpin-futures-channel" }
diem-crypto = { git = "https://github.com/0LNetworkCommunity/diem.git", branch = "unpin-futures-channel" }
env_logger = "^0.11"
flate2 = "^1.0"
glob = "^0.3"
libra-backwards-compatibility =  { git = "https://github.com/0o-de-lally/libra-framework.git", branch = "warehouse-tools" }
libra-cached-packages =  { git = "https://github.com/0o-de-lally/libra-framework.git", branch = "warehouse-tools" }
libra-storage =  { git = "https://github.com/0o-de-lally/libra-framework.git", branch = "warehouse-tools" }
libra-types =  { git = "https://github.com/0o-de-lally/libra-framework.git", branch = "warehouse-tools" }
log = "^0.4"
once_cell = "^1.2"
serde = "^1.0"
serde_json = "^1.0"
tokio = "^1.3"
neo4rs = "^0.7"


[dev-dependencies]
testcontainers = "^0.15"
sqlx = "^0.6"
